@@ -1,0 +1,16 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.sugarandsaltsolutions.micro.model;
+
+import java.awt.Color;
+
+/**
+ * Ethanol particle
+ * TODO: ethanol should be molecule
+ *
+ * @author Sam Reid
+ */
+public class Ethanol extends SphericalParticle {
+    public Ethanol( double radiusInPM, Color chargeColor, Color atomColor ) {
+        super( radiusInPM, chargeColor, atomColor );
+    }
+}
