@@ -1,3 +1,4 @@
+Micro tab: Added ethanol particles
 Micro tab: Added an image for the ethanol dropper
 Micro tab: Added molecular formulae for all molecules in kits 2-4
 Micro tab: When changing kits, switch to a new dispenser (unless dispenser exists in new kit)
